tg-7548 [FE] Modifica componente dock-popup para adaptarlo al diseño de la agenda del profesional

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/counterreference-dock-popup/counterreference-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/counterreference-dock-popup/counterreference-dock-popup.component.html
@@ -1,4 +1,4 @@
-<app-dock-popup [dockPopupRef]="dockPopupRef" [title]="'ambulatoria.paciente.counterreference.TITLE'">
+<app-dock-popup [dockPopupRef]="dockPopupRef" [header]="{ title: 'ambulatoria.paciente.counterreference.TITLE' }">
 	<div body class="counterreference" fxLayout="column" fxLayoutGap="20px">
 
         <div id="reference">
