--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/diagnosis-clinical-evaluation-dock-popup/diagnosis-clinical-evaluation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/diagnosis-clinical-evaluation-dock-popup/diagnosis-clinical-evaluation-dock-popup.component.html
@@ -1,4 +1,4 @@
-<app-dock-popup [dockPopupRef]="dockPopupRef" [title]="'internaciones.clinical-assessment-diagnosis.TITLE'">
+<app-dock-popup [dockPopupRef]="dockPopupRef" [header]="{ title:'internaciones.clinical-assessment-diagnosis.TITLE' }">
 	<div body fxLayout="column" fxLayoutGap="20px">
 		<section id="diagnostic-seleccions">
 			<h2 class="mat-h2" [translate]="'internaciones.clinical-assessment-diagnosis.diagnostics.TITLE'"></h2>
