--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/epicrisis-dock-popup/epicrisis-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/epicrisis-dock-popup/epicrisis-dock-popup.component.html
@@ -1,4 +1,4 @@
-<app-dock-popup [dockPopupRef]="dockPopupRef" [title]="'internaciones.epicrisis.TITLE'" *ngIf="waitToResponse">
+<app-dock-popup [dockPopupRef]="dockPopupRef" [header]="{ title:'internaciones.epicrisis.TITLE'} " *ngIf="waitToResponse">
 	<div body fxLayout="column" fxLayoutGap="20px">
 		<div *ngIf="showWarning">
 			<mat-card class="background-primary">
