--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/evolution-note-dock-popup/evolution-note-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/evolution-note-dock-popup/evolution-note-dock-popup.component.html
@@ -1,4 +1,4 @@
-<app-dock-popup [dockPopupRef]="dockPopupRef" [title]="'internaciones.nota-evolucion.TITLE'">
+<app-dock-popup [dockPopupRef]="dockPopupRef" [header]="{ title:'internaciones.nota-evolucion.TITLE' }">
 	<div body fxLayout="column" fxLayoutGap="20px">
 		<form id="nota-evolucion-form" (keydown.enter)="false" [formGroup]="form">
 			<div id="diagnosticos"
