--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/dock-popup/dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/dock-popup/dock-popup.component.html
@@ -1,26 +1,30 @@
-<div class="dock-popup" fxLayout="column" style="background-color: white">
+<div class="dock-popup app-background-color" fxLayout="column" *ngIf="!dockPopupRef.istoggleWithoutHeader()">
 	<div id="popup-header" fxLayout="row" fxLayoutAlign="space-between center"
 		 class="background-color-primary action-bar"
 		 (click)="toggle(); $event.stopPropagation()">
-		<div id="title" class="mat-body-1 title">
-			{{ title | translate }}
-		</div>
+		<div id="title" class="mat-body-1 title" fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="10px">
+			<mat-icon fontSet="material-icons-outlined" *ngIf="header.matIcon">{{ header.matIcon }}</mat-icon>
+			<span>{{ header.title | translate }}</span>
+		</div>		
 		<div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="3px">
-			<button id="minimize-maximize" mat-icon-button (click)="toggle(); $event.stopPropagation()">
+			<button id="minimize-maximize" mat-icon-button *ngIf="!actions.lockToggle" (click)="toggle(); $event.stopPropagation()">
 				<mat-icon *ngIf="!dockPopupRef.isMinimized() else maximizePopup">minimize</mat-icon>
 			</button>
-			<button id="close" mat-icon-button (click)="close(); $event.stopPropagation()">
+			<button id="close" mat-icon-button  *ngIf="actions.showButtonClose" (click)="close(); $event.stopPropagation()">
 				<mat-icon>close</mat-icon>
+			</button>
+			<button mat-icon-button *ngIf="actions.showButtonChevron" (click)="toggleWithoutHeader(); $event.stopPropagation()">
+				<mat-icon>chevron_right</mat-icon>
 			</button>
 		</div>
 	</div>
 
-	<div class="content app-background-color" fxLayout="column">
-		<div id="dock-popup-body" class="body" *ngIf="!dockPopupRef.isMinimized()">
+	<div [class]="style.cssClassContent" class="app-background-color" fxLayout="column">
+		<div id="dock-popup-body" [class]="style.cssClassBody" *ngIf="!dockPopupRef.isMinimized()">
 			<ng-content select="[body]"></ng-content>
 		</div>
 
-		<div id="dock-popup-actions" class="actions" *ngIf="!dockPopupRef.isMinimized()">
+		<div id="dock-popup-actions" [class]="style.cssClassActions" *ngIf="!dockPopupRef.isMinimized() && actions.showActions">
 			<ng-content select="[actions]"></ng-content>
 		</div>
 	</div>
