--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -1,4 +1,4 @@
-<app-dock-popup [dockPopupRef]="dockPopupRef" [title]="'ambulatoria.paciente.nueva-consulta.TITLE'">
+<app-dock-popup [dockPopupRef]="dockPopupRef" [header]="{ title:'ambulatoria.paciente.nueva-consulta.TITLE' }">
 	<div body fxLayout="column" fxLayoutGap="20px">
 
 		<app-new-consultation-expansion-section id="specialty"
