--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/anamnesis-dock-popup/anamnesis-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/anamnesis-dock-popup/anamnesis-dock-popup.component.html
@@ -1,4 +1,4 @@
-<app-dock-popup [dockPopupRef]="dockPopupRef" [title]="'internaciones.anamnesis.TITLE'">
+<app-dock-popup [dockPopupRef]="dockPopupRef" [header]="{ title:'internaciones.anamnesis.TITLE' }">
 	<form body id="anamnesis-form" (keydown.enter)="false" [formGroup]="form">
 		<div id="diagnosticos">
 			<app-diagnosticos [(mainDiagnosis)]="mainDiagnosis" [(diagnosticos)]="diagnosticos" [type]="'ANAMNESIS'"></app-diagnosticos>
