--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/odontology-consultation-dock-popup/odontology-consultation-dock-popup.component.html
@@ -1,4 +1,4 @@
-<app-dock-popup [dockPopupRef]="dockPopupRef" [title]="'odontologia.odontology-consultation-dock-popup.TITLE'">
+<app-dock-popup [dockPopupRef]="dockPopupRef" [header]="{ title:'odontologia.odontology-consultation-dock-popup.TITLE' }">
 
 	<div body fxLayout="column" fxLayoutGap="20px">
 
