--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/dock-popup/dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/dock-popup/dock-popup.component.scss
@@ -10,6 +10,7 @@
 
 .action-bar {
 	max-height: 10vh;
+	min-height: 4vh;
 	padding: 0 2vw;
 
 	font-weight: 500;
@@ -42,6 +43,16 @@
 		justify-content: flex-end;
 		padding: 20px;
 		box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.25);
+	}
+}
+
+.menu {
+	min-height: 90vh;
+
+	.body-menu {
+		max-height: 83vh;
+		padding: 35px 30px;
+		overflow-y: auto
 	}
 }
 
