tg-7168 Homogeneizar estilo de estados de indicaciones y estudios

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/item-prescripciones/item-prescripciones.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/item-prescripciones/item-prescripciones.component.scss
@@ -5,3 +5,13 @@
 .element-light-color {
 	color: rgba(0, 0, 0, 0.54);
 }
+
+.label {
+	border-radius: 6px;
+	padding: 3px 8px;
+	margin: 10px;
+	font-size: 14px;
+	line-height: 19px;
+	text-align: center;
+	font-weight: 400px;
+}
