--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/list-element-item/list-element-item.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/list-element-item/list-element-item.component.scss
@@ -1,20 +1,10 @@
 .label {
 	border-radius: 6px;
 	padding: 3px 8px;
-	font-size: 12px;
+	font-size: 14px;
 	line-height: 19px;
-	width: 100px;
 	text-align: center;
-}
-
-.blue {
-	background-color: #E0EEF7;
-	color: #2687C5;
-}
-
-.red {
-	background-color: #FDF0F0;
-	color: #EB5757;
+	font-weight: 400px
 }
 
 .professional-elapsed-time {
