--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/item-prescripciones/item-prescripciones.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/item-prescripciones/item-prescripciones.component.html
@@ -1,9 +1,10 @@
-<div fxLayout="row" fxLayoutAlign="space-between start">
-	<p [ngClass]="{ 'active':prescriptionItemData.prescriptionStatus === medication_status.ACTIVE.description || prescriptionItemData.prescriptionStatus === STUDY_STATUS.FINAL.description,
+<div fxLayout="row" fxLayoutAlign="space-between">
+	<div class="label" [ngClass]="{ 'active':prescriptionItemData.prescriptionStatus === medication_status.ACTIVE.description || prescriptionItemData.prescriptionStatus === STUDY_STATUS.FINAL.description,
 					'suspended':prescriptionItemData.prescriptionStatus === medication_status.SUSPENDED.description || prescriptionItemData.prescriptionStatus === STUDY_STATUS.REGISTERED.description,
 					'stopped':prescriptionItemData.prescriptionStatus === medication_status.STOPPED.description }" mat-line>
-		<strong style="margin: 10px" > {{prescriptionItemData.prescriptionStatus |translate | uppercase}}</strong>
-	</p>
+		<strong > {{prescriptionItemData.prescriptionStatus |translate | uppercase}}</strong>
+
+	</div>
 
     <div>
         <ng-content select="[actions]"></ng-content>
