--- a/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda/agenda.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/routes/agenda/agenda.component.scss
@@ -13,6 +13,10 @@ div.spinner {
 .turnos {
 	background-color: white;
 
+	.title {
+		padding: 20px;
+	}
+
 	::ng-deep {
 		.cal-week-view .cal-day-columns {
 			.bg-green {
