tg-7528. [FE] Poder expandir y contraer secciones de la consulta enfermería

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -99,8 +99,7 @@
 
 			<app-datos-antropometricos-nueva-consulta
 				[showPreloadData]="datosAntropometricosNuevaConsultaService.getShowPreloadedAnthropometricData()"
-				[datosAntropometricosNuevaConsultaService]="datosAntropometricosNuevaConsultaService"
-				[showTitle]="false">
+				[datosAntropometricosNuevaConsultaService]="datosAntropometricosNuevaConsultaService">
 			</app-datos-antropometricos-nueva-consulta>
 
 		</app-new-consultation-expansion-section>
