--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/document-section/document-section.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/document-section/document-section.component.html
@@ -1,4 +1,4 @@
-<h2 class="mat-h2" [translate]="sectionTitle"></h2>
+<h2 *ngIf="sectionTitle" class="mat-h2" [translate]="sectionTitle"></h2>
 <h5 *ngIf="sectionImportance" class="recomendado" [translate]="sectionImportance"></h5>
 
 <mat-card>
