tg-7605. [FE/BE] Ocultar edición de profesiones desde el paciente

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -126,7 +126,7 @@
 								</div>
 							</div>
 							<mat-divider inset></mat-divider>
-							<div fxLayout="column" fxLayoutGap="10px">
+							<div *ngIf="!hideProfessions" fxLayout="column" fxLayoutGap="10px">
 								<div content>
 										<app-card-professions [license]="license"
 											[ownProfessionsAndSpecialties]="ownProfessionsAndSpecialties">
