tg-7057 [P2] INTERNACION-filtros de card evoluciones funcionan incorrectamente

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
@@ -216,6 +216,12 @@
 				</div>
 			</div>
 		</div>
+		<div
+			*ngIf="this.documentHistoric && !this.documentHistoric.documents.length">
+			<div class="no-data-styles">
+				<span [translate]="'internaciones.documents-summary.NO_FILTERED_PROBLEMS'"></span>
+			</div>
+		</div>
 	</ng-container>
 
 	<ng-template #noData>
