--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.scss
@@ -62,3 +62,10 @@ mat-selection-list {
 .edit-draft-button{
 	margin-bottom: 15px;
 }
+
+.no-data-styles {
+	padding: 20px 5px;
+	text-align: center;
+	font-weight: bold;
+	color: #A8A8A8;
+}
