--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -3,7 +3,7 @@
 
 		<app-new-consultation-expansion-section id="specialty"
 			[title]="'ambulatoria.paciente.nueva-consulta.SPECIALTY' | translate" icon="medical_services"
-			[isEmpty]="!formEvolucion.value.clinicalSpecialty" [collapsed]="false">
+			[isEmpty]="!formEvolucion.value.clinicalSpecialty" [collapsed]="false" [hideBorder]="true">
 			<app-document-section>
 				<ng-container concept-form>
 					<div fxLayout="row" [formGroup]="formEvolucion">
