tg-7374 [P2]  No se debe poder seleccionar un diagnostico presuntivo, si es un diagnostico principal

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/diagnosis-creation-edition/diagnosis-creation-edition.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/diagnosis-creation-edition/diagnosis-creation-edition.component.html
@@ -25,7 +25,9 @@
 		<mat-label [translate]="'internaciones.anamnesis.diagnosticos.VERIFICATION'"></mat-label>
 		<mat-select formControlName="validation" [(value)]="selection">
 			<mat-option [value]="false">{{ 'internaciones.anamnesis.diagnosticos.CONFIRMED' | translate }}</mat-option>
-			<mat-option [value]="true">{{ 'internaciones.anamnesis.diagnosticos.PRESUMPTIVE' | translate }}</mat-option>
+			<ng-container *ngIf="hasPresumptiveOption">
+				<mat-option [value]="true">{{ 'internaciones.anamnesis.diagnosticos.PRESUMPTIVE' | translate }}</mat-option>
+			</ng-container>
 		</mat-select>
 	</mat-form-field>
 </form>
